--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="search">
         <div class="search-wrapper" >
-            <label for="search">search user</label>
+            <label for="search">search product</label>
             <input type="search"  id="search" data-search>
         </div>
        
